# flutter-app-demo

./: Cargo.toml  README.md  pubspec.yaml
.github/workflows/: ci.yml  main.yml  release.yml
lib/: demos.dart  main.dart  utils.dart
lib/demos/: context_menu.dart  demos.dart  event_channel.dart  keyboard.dart
lib/ui/: widgets.dart
rust/: Cargo.toml  build.toml
rust/src/: calc_channel.rs  main.rs  msg_stream_channel.rs
scripts/: build.py  init.py  requirements.txt  run.py
scripts/lib/: __init__.py  build_mac.py  build_nsis.py  build_snap.py  download.py  installer.nsi  utils.py
src/: main.rs  msg_stream_channel.rs
