[package]
name = "flutter-app-demo"
description = "Amazing desktop flutter app"
version = "0.4.0"
authors = ["juju <gliheng@foxmail.com>", "Sophie Tauchert <sophie@999eagle.moe>"]
edition = "2018"
publish = false

[dependencies]
async-std = "1.4.0"
env_logger = "0.7.1"
flutter-engine = { git = "https://github.com/flutter-rs/flutter-rs" }
flutter-plugins = { git = "https://github.com/flutter-rs/flutter-rs" }
flutter-winit = { git = "https://github.com/flutter-rs/flutter-rs" }
glutin = { git = "https://github.com/dvc94ch/glutin", branch = "android" }
log = "0.4.8"

[target.'cfg(target_os = "android")'.dependencies]
android_glue = { git = "https://github.com/rust-windowing/android-rs-glue" }
android_logger = "0.8.6"
android-ndk = { git = "https://github.com/rust-windowing/android-ndk-rs" }
jni-glue = "0.0.10"

[target.'cfg(target_os = "android")'.dependencies.jni-android-sys]
version = "0.0.10"
features = ["api-level-18", "android-content-Context", "android-content-pm-ApplicationInfo"]
